<funciono la interfaz de eliminar empleado